[package]
name = "dutch-auction"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
dutch-auction-io.workspace = true
primitive-types.workspace = true
non-fungible-token-io.workspace = true
gmeta.workspace = true
gear-lib-old.workspace = true

[dev-dependencies]
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true

# External binaries

non-fungible-token.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
dutch-auction-io.workspace = true
