[package]
name = "dynamic-nft"
version = "0.1.0"
authors = ["Gear Technologies"]
edition = "2021"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], branch = "testnet" }
primitive-types = { version = "0.12.1", default-features = false }
dynamic-nft-io = { path = "io" }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib.git", tag = "0.3.5" }
gear-lib-derive = { git = "https://github.com/gear-dapps/gear-lib.git", tag = "0.3.5" }
sp-core-hashing = { version = "8.0.0", default-features = false }
hashbrown = "0.13"
gmeta = { git = "https://github.com/gear-tech/gear", branch = "testnet", features = ["codegen"] }

[dev-dependencies]
gtest = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
hex-literal = "0.3.4"
sp-core = { version = "6.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable" }
gclient = { git = "https://github.com/gear-tech/gear.git" }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", branch = "testnet" }
dynamic-nft-io = { path = "io" }

[workspace]
members = ["state"]

[features]
binary-vendor = []
