[package]
name = "escrow"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gstd.workspace = true
ft-main-io.workspace = true
async-trait.workspace = true
hashbrown.workspace = true
escrow-io.workspace = true

[build-dependencies]
escrow-io.workspace = true
gear-wasm-builder.workspace = true
gmeta.workspace = true

[dev-dependencies]
gclient.workspace = true
gstd = { workspace = true, features = ["debug"] }
gtest.workspace = true
tokio.workspace = true

[features]
binary-vendor = []

[workspace]
members = ["state"]

[workspace.package]
version = "0.1.7"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gclient = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gtest = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
ft-main-io = { git = "https://github.com/gear-dapps/sharded-fungible-token", tag = "2.1.2" }
async-trait = "0.1.68"
hashbrown = "0.13"
escrow-io = { path = "io" }
tokio = "1"
primitive-types = { version = "0.12", default-features = false }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
