[package]
name = "escrow"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
sharded-fungible-token-io.workspace = true
escrow-io.workspace = true

[build-dependencies]
escrow-io.workspace = true
gear-wasm-builder.workspace = true

[dev-dependencies]
gclient.workspace = true
gstd.workspace = true
gtest.workspace = true
tokio.workspace = true

# External binaries

sharded-fungible-token.workspace = true
sharded-fungible-token-logic.workspace = true
sharded-fungible-token-storage.workspace = true
