[workspace]
resolver = "2"
members = [
    "router",
    "router/io",
    "router-state",
    "channel",
    "channel/io",
    "channel-state"
]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Gear Technologies"]
license = "MIT"

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
router-io = { path = "router/io" }
channel-io = { path = "channel/io" }
hashbrown = "0.13"
gmeta = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gtest = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gclient = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
async-trait = "0.1.64"
subxt = { version = "0.27", default-features = false }
tokio = "1"
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07" }
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
circular_buffer = { git = "https://github.com/breathx/circular-buffer-rs.git", default-features = false }
