[package]
name = "feeds"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
feeds-io.workspace = true

[dev-dependencies]
gtest.workspace = true
feeds-channel-io.workspace = true

[build-dependencies]
feeds-io.workspace = true
gear-wasm-builder.workspace = true
