[package]
name = "fungible-token"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
fungible-token-io.workspace = true
gstd.workspace = true
gmeta.workspace = true

[dev-dependencies]
gstd = { workspace = true, features = ["debug"] }
gtest.workspace = true

[build-dependencies]
fungible-token-io.workspace = true
gear-wasm-builder.workspace = true
