[package]
name = "galactic-express"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
galactic-express-io.workspace = true
num-traits.workspace = true
gear-lib.workspace = true

[dev-dependencies]
gtest.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
galactic-express-io.workspace = true
