[package]
name = "game-of-chance"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gstd.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
ft-main-io.workspace = true
hashbrown.workspace = true
game-of-chance-io.workspace = true

[dev-dependencies]
gstd = { workspace = true, features = ["debug"] }
gtest.workspace = true
gclient.workspace = true
sp-core-hashing.workspace = true
primitive-types.workspace = true
tokio.workspace = true
ft-main.workspace = true
ft-logic.workspace = true
ft-storage.workspace = true

[build-dependencies]
game-of-chance-io.workspace = true
gear-wasm-builder.workspace = true
gmeta.workspace = true

[features]
binary-vendor = []
default = ["binary-vendor"]

[workspace.package]
version = "0.3.5"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gtest = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gclient = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
ft-main-io = { git = "https://github.com/gear-dapps/sharded-fungible-token", tag = "2.1.4" }
ft-main = { git = "https://github.com/gear-dapps/sharded-fungible-token", tag = "2.1.4" }
ft-logic = { git = "https://github.com/gear-dapps/sharded-fungible-token", tag = "2.1.4" }
ft-storage = { git = "https://github.com/gear-dapps/sharded-fungible-token", tag = "2.1.4" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
rand = { version = "0.8", default-features = false }
rand_xoshiro = "0.6"
hashbrown = "0.14"
game-of-chance-io.path = "io"
sp-core-hashing = "8"
primitive-types = "0.12"
tokio = "1"
