[package]
name = "game-of-chance"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
rand.workspace = true
rand_xoshiro.workspace = true
sharded-fungible-token-io.workspace = true
game-of-chance-io.workspace = true

[dev-dependencies]
gstd.workspace = true
gtest.workspace = true
gclient.workspace = true
sp-core-hashing.workspace = true
primitive-types.workspace = true
tokio.workspace = true

# External binaries

sharded-fungible-token.workspace = true
sharded-fungible-token-logic.workspace = true
sharded-fungible-token-storage.workspace = true

[build-dependencies]
game-of-chance-io.workspace = true
gear-wasm-builder.workspace = true
