[package]
name = "gear-lib"
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "d4552434" }
gear-lib-derive = { path = "derive", optional = true }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
primitive-types = { version = "0.12", default-features = false }

[features]
default = ["derive"]
derive = ["gear-lib-derive"]
# Do NOT enable this feature. It's intended for the internal library testing.
testing = []

[dev-dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], rev = "d4552434" }
trybuild = { version = "1", features = ["diff"] }
pretty_assertions = { version = "1", default-features = false, features = ["alloc"] }
