[package]
name = "gear-lib"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"] }
primitive-types = { version = "0.11.1", default-features = false, features = ["scale-info"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
sp-core = { version = "6.0.0", git = "https://github.com/gear-tech/substrate.git", branch = "gear-stable", default-features = false, features = ["full_crypto"] }

[workspace]
members = [
    "derive",
]
