[package]
name = "horse-races"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
oracle-randomness-io.workspace = true
horse-races-io.workspace = true
fungible-token-io.workspace = true

[dev-dependencies]
gstd = { workspace = true, features = ["debug"] }
gtest.workspace = true

# External binaries

fungible-token.workspace = true
horse-races-state.workspace = true
oracle-randomness.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
horse-races-io.workspace = true
