[package]
name = "identity"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
identity-io.workspace = true

[dev-dependencies]
gtest.workspace = true
sp-core.workspace = true
sha2.workspace = true
hex-literal.workspace = true

# External binaries
identity-state.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
identity-io.workspace = true
