[package]
name = "multi-token"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
multi-token-io.workspace = true
gmeta.workspace = true

[dev-dependencies]
gstd.workspace = true
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
multi-token-io.workspace = true
