[package]
name = "multisig-wallet"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
multisig-wallet-io.workspace = true
primitive-types.workspace = true

[dev-dependencies]
gstd.workspace = true
gtest.workspace = true

[build-dependencies]
multisig-wallet-io.workspace = true
gear-wasm-builder.workspace = true
