[package]
name = "multisig-wallet"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
multisig-wallet-app = { path = "app" }

[build-dependencies]
multisig-wallet-app = { path = "app" }
sails-rs = { workspace = true, features = ["wasm-builder"] }
sails-idl-gen.workspace = true

[dev-dependencies]
multisig-wallet = { path = ".", features = ["wasm-binary"] }
multisig-wallet-client = { path = "client" }
sails-rs = { workspace = true, features = ["gtest"] }
tokio = { workspace = true, features = ["rt", "macros"] }
gtest.workspace = true

[features]
wasm-binary = []
