[package]
name = "nft-marketplace"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
primitive-types.workspace = true
non-fungible-token-io.workspace = true
nft-marketplace-io.workspace = true
sharded-fungible-token-io.workspace = true
gear-lib-old.workspace = true
async-trait.workspace = true

[dev-dependencies]
gstd.workspace = true
gtest.workspace = true
gclient.workspace = true
tokio.workspace = true
blake2-rfc.workspace = true

# External binaries

sharded-fungible-token.workspace = true
sharded-fungible-token-logic.workspace = true
sharded-fungible-token-storage.workspace = true
non-fungible-token.workspace = true

[build-dependencies]
nft-marketplace-io.workspace = true
gear-wasm-builder.workspace = true
