[package]
name = "nft-master"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
nft-master-io.workspace = true
gstd.workspace = true

[build-dependencies]
nft-master-io.workspace = true
gear-wasm-builder.workspace = true

[dev-dependencies]
gtest.workspace = true
gstd = { workspace = true, features = ["debug"] }
tokio.workspace = true
gclient.workspace = true
