[package]
name = "nft-pixelboard"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gstd.workspace = true
nft-pixelboard-io.workspace = true
gear-lib.workspace = true
ft-main-io.workspace = true
nft-io.workspace = true

[dev-dependencies]
gstd = { workspace = true, features = ["debug"] }
ft-logic.workspace = true
ft-storage.workspace = true
ft-main.workspace = true
nft.workspace = true
gtest.workspace = true
tokio.workspace = true

[build-dependencies]
gmeta.workspace = true
nft-pixelboard-io.workspace = true
gear-wasm-builder.workspace = true

[features]
binary-vendor = []

[workspace]
members = ["state"]

[workspace.package]
version = "0.1.3"
edition = "2021"
authors = ["Gear Technologies"]
license = "MIT"

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
gtest = { git = "https://github.com/gear-tech/gear", rev = "946ac47" }
ft-main-io = { git = "https://github.com/gear-dapps/sharded-fungible-token", tag = "2.1.4" }
ft-logic = { git = "https://github.com/gear-dapps/sharded-fungible-token", tag = "2.1.4" }
ft-storage = { git = "https://github.com/gear-dapps/sharded-fungible-token", tag = "2.1.4" }
ft-main = { git = "https://github.com/gear-dapps/sharded-fungible-token", tag = "2.1.4" }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib", tag = "0.3.9" }
nft-io = { git = "https://github.com/gear-dapps/non-fungible-token", tag = "0.2.12" }
nft = { git = "https://github.com/gear-dapps/non-fungible-token", tag = "0.2.12" }
nft-pixelboard-io.path = "io"
nft-pixelboard-state.path = "state"
subxt = { version = "0.27", default-features = false }
tokio = "1"
scale-info = { version = "2", default-features = false }
parity-scale-codec = { version = "3", default-features = false }
