[package]
name = "nft-pixelboard"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
nft-pixelboard-io.workspace = true
gear-lib-old.workspace = true
sharded-fungible-token-io.workspace = true
non-fungible-token-io.workspace = true

[dev-dependencies]
gstd = { workspace = true, features = ["debug"] }
gtest.workspace = true

# External binaries
non-fungible-token.workspace = true
sharded-fungible-token.workspace = true
sharded-fungible-token-logic.workspace = true
sharded-fungible-token-storage.workspace = true

[build-dependencies]
nft-pixelboard-io.workspace = true
gear-wasm-builder.workspace = true
