[package]
name = "nft"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd = { workspace = true, features = ["debug"] }
primitive-types.workspace = true
nft-io.workspace = true
gear-lib.workspace = true
gear-lib-derive.workspace = true
sp-core-hashing.workspace = true
hashbrown.workspace = true
gmeta.workspace = true

[dev-dependencies]
nft-state = { workspace = true, features = ["binary-vendor"] }
hex-literal.workspace = true
sp-core.workspace = true
gclient.workspace = true
gtest.workspace = true
tokio.workspace = true

[features]
binary-vendor = []

[build-dependencies]
nft-io.workspace = true
gear-wasm-builder.workspace = true
gmeta.workspace = true

[workspace.package]
version = "0.2.11"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]

[workspace]
members = ["state"]

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07" }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gtest = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gclient = { git = "https://github.com/gear-tech/gear.git", rev = "78dfa07" }
nft-io = { path = "io" }
nft-state = { path = "state" }
primitive-types = { version = "0.12.1", default-features = false }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib.git", tag = "0.3.7" }
gear-lib-derive = { git = "https://github.com/gear-dapps/gear-lib.git", tag = "0.3.7" }
sp-core-hashing = { version = "8.0.0", default-features = false }
hashbrown = "0.13"
hex-literal = "0.4"
sp-core = { git = "https://github.com/gear-tech/substrate.git", rev = "36699c4478ce8ae05517bb42a1b115403313e083" }
tokio = "1"
