[package]
name = "non-fungible-token"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
primitive-types.workspace = true
non-fungible-token-io.workspace = true
gear-lib-old.workspace = true
gear-lib-derive.workspace = true
sp-core-hashing.workspace = true
gmeta.workspace = true

[dev-dependencies]
hex-literal.workspace = true
sp-core.workspace = true
gclient.workspace = true
gtest.workspace = true
tokio.workspace = true

[build-dependencies]
non-fungible-token-io.workspace = true
gear-wasm-builder.workspace = true
