[package]
name = "on-chain-nft"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gstd.workspace = true
primitive-types.workspace = true
parity-scale-codec.workspace = true
scale-info.workspace = true
gear-lib.workspace = true
gear-lib-derive.workspace = true
hashbrown.workspace = true
onchain-nft-io.workspace = true
gmeta.workspace = true

[dev-dependencies]
gstd = { workspace = true, features = ["debug"] }
gtest.workspace = true
gclient.workspace = true
onchain-nft-state = { workspace = true, features = ["binary-vendor"] }
tokio = "1"

[build-dependencies]
gear-wasm-builder.workspace = true
onchain-nft-io.workspace = true
gmeta.workspace = true

[features]
binary-vendor = []

[workspace]
members = ["state"]

[workspace.package]
version = "0.2.1"
authors = ["Gear Technologies"]
edition = "2021"
license = "MIT"

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gclient = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gtest = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gmeta = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear", rev = "78dfa07" }
tokio = "1"
onchain-nft-io.path = "io"
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }
hashbrown = "0.13"
primitive-types = { version = "0.12", default-features = false }
gear-lib = { git = "https://github.com/gear-dapps/gear-lib", tag = "0.3.7" }
gear-lib-derive = { git = "https://github.com/gear-dapps/gear-lib", tag = "0.3.7" }
onchain-nft-state = { path = "state" }
